# cpp-limit-order-book-market-maker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
artifacts/fill_diagnostics/: fill_decomposition_by_seed.csv  fill_decomposition_summary.csv  mechanism_attribution_summary.csv  mechanism_summary.csv  paired_differences.csv  run_config.csv  statistical_summary.csv  strategy_comparison_by_seed.csv  strategy_comparison_summary.csv  zero_queue_comparison.csv
benchmarks/: orderbook_benchmark.cpp  run_benchmark.py
benchmarks/results/stage2_local/: run_config.csv  summary.csv  tail_event.csv
benchmarks/results/stage3_avellaneda_stoikov_checkpoint/: avellaneda_stoikov_trending_skew.csv  equity_curve.csv  summary.csv
benchmarks/results/stage3_comparison/: metrics_table.csv  summary_by_strategy.csv
benchmarks/results/stage3_naive_checkpoint/: adverse_selection_split.csv  equity_curve.csv  run_config.csv  summary.csv
benchmarks/results/stage3_naive_validation/: reconciliation_scaling.csv  seed_sensitivity_and_symmetry.csv
benchmarks/results/stage4a_itch_replay/: cancel_to_fill.csv  event_mix.csv  message_support.csv  order_lifetimes.csv  size_distribution.csv  source_message_mix.csv  summary.csv  trades.csv  translated_orders.csv  translation_detail.csv
benchmarks/results/stage4b_avellaneda_stoikov_comparison/: avellaneda_stoikov_trending_skew.csv  run_config.csv
benchmarks/results/stage4b_calibrated_avellaneda_stoikov_comparison/: adverse_selection_split.csv  avellaneda_stoikov_calibrated_trending_skew.csv  equity_curve.csv  run_config.csv  summary.csv
benchmarks/results/stage4b_calibrated_tick_20c_comparison/: adverse_selection_split.csv  avellaneda_stoikov_calibrated_trending_skew.csv  equity_curve.csv  run_config.csv  summary.csv
benchmarks/results/stage4b_calibrated_tick_5c_comparison/: adverse_selection_split.csv  avellaneda_stoikov_calibrated_trending_skew.csv  equity_curve.csv  run_config.csv  summary.csv
benchmarks/results/stage4b_intensity_fit/: fit_input_buckets.csv  fit_summary.csv  parity_diagnostics.csv
benchmarks/results/stage4b_intensity_measurement/: bucket_diagnostics.csv  distance_outliers.csv  fill_probability_by_distance.csv  summary.csv
benchmarks/results/stage4b_intensity_regular_session/: bucket_diagnostics.csv  distance_outliers.csv  fill_probability_by_distance.csv  quote_segments.csv  summary.csv
benchmarks/results/stage4b_naive_comparison/: summary.csv
benchmarks/results/stage4b_strategy_comparison/: avellaneda_stoikov_adverse_selection_split.csv  metrics_table.csv  summary_by_strategy.csv  tick_size_sensitivity.csv
benchmarks/results/stage4c_avellaneda_stoikov_risk_controlled/: avellaneda_stoikov_trending_skew.csv  equity_curve.csv  run_config.csv  summary.csv
benchmarks/results/stage4c_naive_risk_controlled/: adverse_selection_split.csv  equity_curve.csv  run_config.csv  summary.csv  terminal_liquidation_levels.csv
benchmarks/results/stage4c_risk_controlled_comparison/: avellaneda_stoikov_adverse_selection_split.csv  avellaneda_stoikov_terminal_liquidation_levels.csv  avellaneda_stoikov_terminal_liquidation_trades.csv  metrics_table.csv  naive_terminal_liquidation_trades.csv  summary_by_strategy.csv
benchmarks/results/stage4d_comparison/: baseline_reconciliation.csv  metrics_table.csv
docs/: design.md  edge_cases.md  fill_rate_queue_diagnostics.md  market_maker.md  performance.md  research_note.md  stage3_results.md  stage4a_replay.md  stage4b_calibration_gate.md  stage4b_intensity_fit.md  stage4b_intensity_measurement.md  stage4b_strategy_comparison.md  stage4c_results.md  stage4c_risk_controls.md  stage4d_flat_order_book.md  stage5b_itch_calibrated_flow.md  stage5c_seed_statistics.md  stage5d_queue_position.md
include/lob/: csv_io.hpp  flat_order_book.hpp  market_maker_simulation.hpp  matching_engine.hpp  order_book.hpp  price_level.hpp  simulation.hpp  types.hpp
scripts/: generate_fill_rate_diagnostics.py  validate_fill_rate_artifacts.py
simulations/: compare_market_makers.py  compare_tick_size_sensitivity.py  market_maker_sim.cpp  run_market_maker.py  run_queue_position_diagnostics.py  run_seed_statistics.py
src/: csv_io.cpp  flat_order_book.cpp  market_maker_simulation.cpp  matching_engine.cpp  order_book.cpp  price_level.cpp  replay_main.cpp  simulation.cpp
tests/: csv_replay_tests.cpp  fill_rate_artifact_validator_tests.py  fill_rate_diagnostics_tests.py  fit_itch_intensity_tests.py  itch_intensity_calibration_tests.py  itch_replay_tests.py  market_maker_simulation_tests.cpp  matching_engine_tests.cpp  queue_position_diagnostics_tests.py  seed_statistics_tests.py  simulation_accounting_tests.cpp
tests/fixtures/: expected_trades.csv  orders.csv
tools/: check_markdown_links.py  compare_itch_execution_modes.py  fit_itch_intensity.py  itch_intensity_calibration.py  itch_replay.py
(+59 files in other folders)
